# hfc-thrift

./: .gitignore  Readme.md  apps.xml  compile.sh  pom.xml  run-thrift
src/assembly/: client-assembly.xml  deploy-assembly.xml  server-assembly.xml
src/main/cpp/: FindTECS.cmake  FindThrift.cmake  HfcDbClient.hpp  client_main.cpp
src/main/gen-cpp/: HfcDbService.cpp  HfcDbService.h  HfcDbService_server.skeleton.cpp  StreamingClientService.cpp  StreamingClientService.h  StreamingClientService_server.skeleton.cpp  hfc_db_types.cpp  hfc_db_types.h  streamingclient_types.h
src/main/gen-java/de/dfki/lt/hfc/db/remote/: HfcDbService.java  PropInfo.java  QueryException.java  QueryResult.java  Table.java  TupleException.java  WrongFormatException.java
src/main/gen-py/hfc_db/: HfcDbService-remote  HfcDbService.py  ttypes.py
src/main/gen-py/hfc_stream/: StreamingClientService-remote  StreamingClientService.py  __init__.py
src/main/java/de/dfki/lt/hfc/db/ui/: Listener.java  (+4 more)
src/main/python/: ReadMePy.md  hfcclient.py  hfcdbtest.py  pyproject.toml  rdfbase.py  rdfproxy.py  xsdutils.py
src/main/python/src/hfc_db/: HfcDbService-remote  HfcDbService.py  __init__.py  ttypes.py
src/main/python/src/hfc_thrift/: hfcclient.py  rdfproxy.py  xsdutils.py
src/main/python/test/: hfcdbtest.py
src/main/resources/: logback.xml
src/main/thrift/: hfc_db.thrift
src/test/data/: default.eqred.nt  domain.nt  rifca.nt  rifca.yml  test.yml  testNoEq.yml  timeline.nt
src/test/resources/data/: dialogue.nt  domain.nt  equiv.nt  test.yml  testNoEq.yml  upper.nt
src/www-doc/: index.html
(+18 files in other folders)
