[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "hfc_thrift"
version = "0.2.1"
requires-python = ">=3.10"
dependencies = [
    "thrift >= 0.21.0",
]

[tool.pyright]
include = ["src"]
ignore = ["src/hfc_db"]
typeCheckingMode = "basic"
executionEnvironments = [
    { root = "test", extraPaths = ["src"] }
]
